# structlite

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: coderabbit.yaml
.github/workflows/: publish.yml  tests.yml
examples/: README.md  advanced_example.py  cool_features_demo.py  main.py
structlite/: __init__.py  core.py
tests/: __init__.py  test_async.py  test_basic.py  test_database.py
